@@ -1,43 +1,28 @@
 /*
- * JBoss, Home of Professional Open Source.
- * Copyright 2011, Red Hat, Inc., and individual contributors
- * as indicated by the @author tags. See the copyright.txt file in the
- * distribution for a full listing of individual contributors.
- *
- * This is free software; you can redistribute it and/or modify it
- * under the terms of the GNU Lesser General Public License as
- * published by the Free Software Foundation; either version 2.1 of
- * the License, or (at your option) any later version.
- *
- * This software is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this software; if not, write to the Free
- * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ * Copyright The WildFly Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package org.wildfly.clustering.jgroups.spi;
 
-import java.util.Collections;
 import java.util.Map;
 
 import org.jboss.as.network.SocketBinding;
 import org.jgroups.stack.Protocol;
+import org.wildfly.service.descriptor.BinaryServiceDescriptor;
 
 /**
  * Defines the configuration of a JGroups protocol.
  * @author Paul Ferraro
  */
 public interface ProtocolConfiguration<P extends Protocol> {
+    @SuppressWarnings("unchecked")
+    BinaryServiceDescriptor<ProtocolConfiguration<Protocol>> SERVICE_DESCRIPTOR = BinaryServiceDescriptor.of("org.wildfly.clustering.jgroups.protocol", (Class<ProtocolConfiguration<Protocol>>) (Class<?>) ProtocolConfiguration.class);
 
     String getName();
 
     P createProtocol(ProtocolStackConfiguration stackConfiguration);
 
     default Map<String, SocketBinding> getSocketBindings() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
